# stitch

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  justfile
client/: Cargo.toml  stitch.example.toml
client/src/: animations.rs  config.rs  main.rs  tui.rs
helm/: Chart.yaml  README.md  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
proto/: Cargo.toml  build.rs
proto/proto/stitch/v1/: service.proto
proto/src/: lib.rs
server/: Cargo.toml  Dockerfile
server/migrations/: 20250609000100_create_channels_table.down.sql  20250609000100_create_channels_table.sql  20250610000100_create_streams_table.down.sql  20250610000100_create_streams_table.sql  20250611000100_drop_categories_from_streams.down.sql  20250611000100_drop_categories_from_streams.sql  20250720000100_add_active_to_channels.down.sql  20250720000100_add_active_to_channels.sql
server/src/: adapters.rs  app.rs  config.rs  main.rs  utils.rs
server/src/adapters/: db.rs  grpc.rs  twitch.rs  webhook.rs
server/src/service/: channel.rs
server/src/utils/: ttl_set.rs
