[workspace]
members = [
    "client",
    "server",
    "proto",
]
resolver = "3"

[workspace.dependencies]
tonic = { version = "0.13.1", features = ["transport", "prost", "codegen"] }
prost = { version = "0.13.5" }
prost-types = "0.13.5"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.39", features = ["derive", "env"] }
