[workspace]
members = [
    "client",
    "server",
    "proto",
]
resolver = "3"

[workspace.dependencies]
tonic = { version = "0.14.0", features = ["transport", "codegen"] }
prost = { version = "0.14.1" }
prost-types = "0.14.1"
tracing-subscriber = "0.3.19"
clap = { version = "4.5.42", features = ["derive", "env"] }
