[package]
name = "stitch"
version = "0.1.0"
edition = "2021"

[dependencies]
proto = { path = "../proto" }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
tokio = { version = "1.45.1", features = ["macros", "rt", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"