[package]
name = "stitch-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { workspace = true }
dashmap = "6.1.0"
dotenv = "0.15.0"
hmac = "0.12.1"
hex = "0.4.3"
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "json",
    "postgres",
    "macros",
    "chrono",
] }
proto = { path = "../proto" }
tokio = { version = "1.47.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "signal",
    "full",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic = { workspace = true }
serenity = { version = "0.12.4", features = ["client"] }
futures = "0.3.31"
thiserror = "2.0.12"
tokio-util = "0.7.16"
console-subscriber = "0.4.1"
tower = "0.5.2"
tower_governor = "0.8.0"
